- Added Calamity accessory recipes.
- Added shiny icons for the config.